Fresh base to start. Precedent code in the .old folder. A lot of code will be recuperated, remodeled from this.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,6 @@ mastawrap/__pycache__/
 mastawrap/base/__pycache__/
 mastawrap/base/templates/__pycache__/
 mastawrap/base/utils/__pycache__/
-mastawrap/constructor/__pycache__/
-mastawrap/constructor/workCamp/__pycache__/
-mastawrap/constructor/workCamp/farms/__pycache__/
+mastawrap/.old/constructor/__pycache__/
+mastawrap/.old/constructor/workCamp/__pycache__/
+mastawrap/.old/constructor/workCamp/farms/__pycache__/
