Big move !!! Separation of the application into its 4 first base components : - mastacore : the resource manager and base classes module, the heart of the app - mastasupport : helpers and utils, logger, etc ... - mastawork : muscles of the app, does the actual work - mastawrap : main app, defines code templating, translaion running, principal interface of the backend
Coming soon :
- Base architecture for frontend, still have to chose the interface module
- Still have to make a decision for data persistence, don't want db

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 
 .idea/
 mastawrap/.old/
-mastawrap/base/templates/languages/
+mastawrap/.old/base/templates/languages/
 mastawrap/interpreters/
 test.py
 **/__pycache__/
